Got rid of extra space at the top of mobile view. Inadvertently fixed scrolling positions for nav links.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -588,6 +588,10 @@ a {
         font-size: 18px;
     }
 
+    body {
+        padding-top: 75px;
+    }
+
     .mar_mob_10px {
         margin-bottom: 10px;
     }
@@ -607,7 +611,7 @@ a {
     }
 
     #home {
-        height: 200px;
+        display: none;
     }
 
     .navbar-default .navbar-brand {
